--- a/src/app/components/shared/navbar/navbar.component.html
+++ b/src/app/components/shared/navbar/navbar.component.html
@@ -9,10 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" routerLink="home">Home</a>
             </li>
             <li class="nav-item" routerLinkActive="active">
-                <a class="nav-link" href="#">Link</a>
+                <a class="nav-link" routerLink="search">Search</a>
             </li>
 
         </ul>
