--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -3,3 +3,13 @@
         {{ pais.name }} - {{ pais.population | number }}
     </li>
 </ul> -->
+
+<div class="card-columns">
+    <div *ngFor="let cancion of newReleases" class="card">
+        <img [src]="cancion.images[0].url" class="card-img-top" alt="...">
+        <div class="card-body">
+            <h5 class="card-title"> {{ cancion.name }} </h5>
+            <p class="card-text"><span *ngFor="let artista of cancion.artists" class="badge badge-pill badge-info">{{ artista.name }}</span></p>
+        </div>
+    </div>
+</div>
