--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,1 +1,6 @@
-<p>search works!</p>
+<div class="row">
+    <div class="col">
+        <input type="text" (keyup)="buscarArtista()" class="form-control" placeholder="Buscar artista...">
+    </div>
+
+</div>
