--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,6 +1,16 @@
 <div class="row">
     <div class="col">
-        <input type="text" (keyup)="buscarArtista()" class="form-control" placeholder="Buscar artista...">
+        <input #termino type="text" (keyup)="buscarArtista(termino.value)" class="form-control" placeholder="Buscar artista...">
     </div>
 
+</div>
+
+<div class="card-columns m-5">
+    <div *ngFor="let artista of artistas" class="card">
+        <img [src]="artista.images[0].url" class="card-img-top" [alt]="artista.name">
+        <div class="card-body">
+            <h5 class="card-title"> {{ artista.name }} </h5>
+
+        </div>
+    </div>
 </div>
