--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -7,7 +7,9 @@
 
 <div class="card-columns m-5">
     <div *ngFor="let artista of artistas" class="card">
-        <img [src]="artista.images[0].url" class="card-img-top" [alt]="artista.name">
+        <!-- <img [src]="artista.images[0].url" class="card-img-top" [alt]="artista.name"> -->
+        <!-- Con pipe para filtrar imágenes -->
+        <img [src]="artista.images | noimage" class="card-img-top" [alt]="artista.name">
         <div class="card-body">
             <h5 class="card-title"> {{ artista.name }} </h5>
 
