Preparar ruta y función para ver artistas.

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -15,4 +15,6 @@
     </div>
 </div> -->
 
+<app-loading *ngIf="loading" class="m-5"></app-loading>
+
 <app-tarjeta [items]="artistas"></app-tarjeta>
