--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,6 +16,6 @@
     </div>
 </div> -->
 
-<app-loading *ngIf="loading"></app-loading>
+<app-loading *ngIf="loading" class="m-5"></app-loading>
 
-<app-tarjeta [items]="newReleases"></app-tarjeta>
+<app-tarjeta *ngIf="!loading" [items]="newReleases"></app-tarjeta>
