Anyadir imagen y vista previa tracks.

--- a/src/app/components/artista/artista.component.html
+++ b/src/app/components/artista/artista.component.html
@@ -30,10 +30,14 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let track of topTracks">
-                        <td></td>
+                        <td>
+                            <img [src]="track.album.images | noimage" class="img-thumb">
+                        </td>
                         <td>{{ track.album.name }}</td>
                         <td>{{ track.name }}</td>
-                        <td></td>
+                        <td>
+                            <audio [src]="track.preview_url" controls></audio>
+                        </td>
                     </tr>
 
                 </tbody>
